# ssingulist

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  create_tables.py  estrutura_frontend.txt  estrutura_projeto1.txt  main.py  package-lock.json  pre-commit-config.yaml  pyproject.toml  render.yaml
backend/: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  create_tables.py  estrutura.txt  estrutura_projeto.txt  estrutura_singulist.txt  main.py  main_simples.py  pyproject.toml  render.yaml
backend/.github/workflows/: ci-cd.yml
backend/app/: main.py
backend/app/auth/: admin_only.py  auth.bearer.py  auth_bearer.py  auth_firebird.py  auth_handler.py  auth_service.py  auth_utils.py
backend/app/core/: config.py  email_utils.py  security.py
backend/app/db/: create_tables.py  database.py  session.py
backend/app/integration/: estoque_services.py
backend/app/models/: franquia_ordem.py  historico.py  ordem_compra.py  ordem_compra_detalhes.py  pendencia_substancia.py  solicitacao.py  solicitacao_laboratorio.py  usuario.py
backend/app/routers/: auth.py  debug_ordens.py  minhas_solicitacoes.py  ordem_compra.py  ordem_compra_detalhes.py  produto_router.py  produtos.py  solicitacao.py  solicitacoes.py  solicitacoes_laboratorio.py  test_minhas.py  usuario.py
backend/app/schemas/: FranquiaOrdem.py  Ordem_Compra_Detalhes.py  ordem_compra.py  pendencia_substancia.py  usuario.py  (+5 more)
backend/backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: conftest.py  test_app.py  test_auth.py  test_solicitacao_erros.py  teste_solicitacao.py
(+138 files in other folders)
